--- a/Conexion/pom.xml
+++ b/Conexion/pom.xml
@@ -17,5 +17,5 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-    <name>Con</name>
+    <name>Conexion</name>
 </project>
